initial version with all commands